2005-08-22  Sebastien Bacher  <seb128@debian.org>

	* NEWS: update for 2.11.92

2005-08-21  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in: Simply enable-aboutme check, and fix
	configure output.

2005-08-21  Sebastien Bacher  <seb128@debian.org>

	* configure.in: fix the --enable-aboutme configure option,
	patch by Ray Strode <rstrode@redhat.com> (Closes: #313121).

2005-08-14  Sergey V. Udaltsov <svu@gnome.org>

	* configure.in, libkbdraw/Makefile.am, capplets/keyboard/Makefile.am:
	fixing #313368

2005-08-10  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update to 2.11.92

==================== 2.11.91 ===================
	
2005-08-10  Sebastien Bacher  <seb128@debian.org>

	* NEWS: update for 2.11.91.

2005-08-04  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>

	* configure.in: Added "te" to ALL_LINGUAS.

2005-07-27  Sebastien Bacher  <seb128@debian.org>

	* configure.in: update to 2.9.91

==================== 2.11.90 ===================	
	
2005-07-27  Sebastien Bacher  <seb128@debian.org>

	* .cvsignore:
	* Makefile.am:
	* autogen.sh:
	* configure.in:
	* m4/.cvsignore:
	switch to gnome-doc-utils. require automake-1.9 and use "tar-ustar" to
	fix the make dist.

2005-07-27  Sebastien Bacher  <seb128@debian.org>

	* NEWS:
	* configure.in: updated for 2.11.90.

2005-07-27  Mark McLoughlin  <mark@skynet.ie>

	* configure.in, autogen.sh: revert what looks like
	accidentally committed changes from svu.

2005-07-20  Rodrigo Moya <rodrigo@novell.com>

	* control-center.spec.in: require either xscreensaver or gnome-screensaver.

	* schemas/apps_gnome_settings_daemon_screensaver.schemas.in: don't
	mention explicitly xscreensaver, but "generic screen saver".
	
2005-07-19  Mark McLoughlin  <mark@skynet.ie>

	See http://mail.gnome.org/archives/desktop-devel-list/2005-July/msg00341.html

	* capplets/wm-properties/*: remove old crufty code.

2005-07-17  Sven Herzberg  <herzi@gnome-de.org>

	* configure.in: use pkg-config to check for xcursor
