@@ -5,19 +5,15 @@ always_built_SUBDIRS =					\
 	theme-switcher ui-properties			\
 	keybindings network windows
 
+SUBDIRS = $(always_built_SUBDIRS)
+
 if HAVE_RANDR
-randr_SUBDIRS = display
-else
-randr_SUBDIRS = 
+SUBDIRS += display
 endif
 
 if BUILD_ABOUTME
-aboutme_SUBDIRS = about-me
-else
-aboutme_SUBDIRS =
+SUBDIRS += about-me
 endif
 
-SUBDIRS =  $(always_built_SUBDIRS) $(randr_SUBDIRS) $(aboutme_SUBDIRS)
-
 DIST_SUBDIRS = \
-	$(always_built_SUBDIRS) display $(aboutme_SUBDIRS)
+	$(always_built_SUBDIRS) display about-me
