@@ -1,3 +1,7 @@
+2005-08-22  Christian Persch  <chpe@cvs.gnome.org>
+
+	* capplets/Makefile.am: Fix distcheck.
+
 2005-08-22  Sebastien Bacher  <seb128@debian.org>
 
 	* NEWS: update for 2.11.92
